kubernetes/pratical/final/challenges/uccdi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uccdi-ingress
  namespace: challs
spec:
  rules:
  - host: uccdi.challs.ctfssi-2022.test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ctfd-2022-chall-uccdi-service
              port:
                number: 80
